students/YarmolovichAleksandr/task_02/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: app24
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
